# 2020-fall-bug

./: .gitignore  README.md
backend/: .gitignore  Cargo.toml  README.md  diesel.toml
backend/audio-client/: README.md
backend/audio-client/src/: main.rs
backend/audio/src/: audio.rs
backend/event/: Cargo.toml
backend/event/src/: event.rs  lib.rs
backend/migrations/2020-12-26-054900_create_enum_event_kind/: down.sql  up.sql
backend/migrations/2020-12-26-055109_create_table_events/: up.sql
backend/migrations/2020-12-26-055317_create_table_devices/: up.sql
backend/migrations/2020-12-26-075109_create_table_events/: up.sql
backend/migrations/2020-12-26-075317_create_table_devices/: up.sql
backend/migrations/2020-12-28-064704_create_table_device_credentials/: up.sql
backend/migrations/2020-12-31-053236_create_table_labels/: up.sql
backend/migrations/2020-12-31-053240_create_table_events_labels/: down.sql  up.sql
backend/migrations/2020-12-31-060401_create_table_composed_events/: down.sql  up.sql
backend/migrations/2020-12-31-060554_create_table_composed_events_events/: down.sql  up.sql
backend/src/: lib.rs  logger.rs  main.rs  schema.patch  schema.rs  server.rs
backend/src/actor/: audio_handler.rs  audio_server.rs  event_handler.rs  event_processor.rs  event_server.rs  mod.rs  ws_manager.rs
backend/src/actor/db/: composed_event.rs  device.rs  device_credential.rs  event.rs  event_label.rs  label.rs  mod.rs
backend/src/http/: device.rs  event.rs  label.rs  mod.rs  server.rs  server_response.rs  ws.rs
bug/: .gitignore  README.md
(+90 files in other folders)
