[package]
name = "backend"
version = "0.1.0"
authors = ["han0110 <tinghan0110@gmail.com>"]
edition = "2018"

[dependencies]
actix = "0.10.0"
actix-web = "3.3.2"
anyhow = "1.0.35"
audio = { path = "./audio" }
bincode = "1.3.1"
bytes = "0.5.0"
diesel = { version = "1.4.5", features = ["postgres", "r2d2", "uuidv07", "serde_json", "chrono"] }
diesel-derive-enum = { version = "1.1.0", features = ["postgres"] }
event = { path = "./event" }
futures = "0.3.8"
hound = "3.4.0"
num_cpus = "1.13.0"
structopt = { version = "0.3.21" }
serde = { version = "1.0.118" }
tokio = "0.2.6"
tokio-util = { version = "0.3.1", features = ["codec", "udp"] }
uuid = { version = "0.8.1", features = ["v4"] }
serde_json = "1.0.60"
chrono = { version = "0.4.19", features = ["serde"] }
slog-term = "2.6.0"
slog-async = "2.5.0"
slog = "2.7.0"
rand = "0.8.0"
actix-cors = "0.5.3"
actix-files = "0.5.0"
serde-hex = "0.1.0"

[workspace]
members = ["audio", "audio-client", "event"]
