[package]
name = "event"
version = "0.1.0"
authors = ["han0110 <tinghan0110@gmail.com>"]
edition = "2018"

[dependencies]
actix = "0.10.0"
bincode = "1.3.1"
bytes = "0.5.6"
diesel = { version = "1.4.5", features = ["postgres", "serde_json"] }
serde = { version = "1.0.118", features = ["serde_derive"] }
serde_json = "1.0.60"
tokio-util = { version = "0.3.1", features = ["codec", "udp"] }
